[package]
name = "batch_generator"
version = "1.85.0"
edition = "2024"

[dependencies]
hashbrown = {version = "0.16.1", features = ["rayon"]}
itertools = "0.14.0"
nohasher = "1.0.0"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"

[[bin]]
name = "batch_generator"
path = "main.rs"

[lints.rust]
unexpected_cfgs = { level = "forbid", check-cfg = [] }

[features]
fast-insertions = []
inline-more = ["hashbrown/inline-more"]